--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     />
 
     <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
 
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -29,20 +32,30 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
-    <title>My Portfolio | Sandhika Galih</title>
+    <title>My Portfolio | Rio Riswandha Darmawan</title>
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top" id="navbar">
       <div class="container">
-        <a class="navbar-brand" href="#">Sandhika Galih</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="#">Rio Riswandha Darmawan</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -60,14 +73,20 @@
     <!-- Akhir Navbar -->
 
     <!-- Jumbotron -->
-    <section class="jumbotron text-center">
-      <img src="img/sandhika.jpg" alt="Sandhika Galih" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Sandhika Galih</h1>
-      <p class="lead">Lecturer | Content Creator</p>
+    <section class="jumbotron text-center" id="welcome-section">
+      <img
+        src="img/rio.jpg"
+        alt="Sandhika Galih"
+        width="200"
+        class="rounded-circle img-thumbnail"
+      />
+      <h1 class="display-4">Rio Riswandha Darmawan</h1>
+      <p class="lead">Web Developer</p>
+      <a href="https://github.com/riordarmawan" target="_blank" class="btn btn-dark btn-github" id="profile-link">My Github <i class="bi bi-github"></i></a>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
-          fill-opacity="10"
+          fill-opacity="10" class="wave1"
           d="M0,64L48,80C96,96,192,128,288,128C384,128,480,96,576,80C672,64,768,64,864,96C960,128,1056,192,1152,186.7C1248,181,1344,107,1392,69.3L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
         ></path>
       </svg>
@@ -84,10 +103,18 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4" data-aos="fade-right">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure mollitia voluptatum corrupti sint delectus facilis pariatur recusandae! Eveniet, iure debitis?</p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure
+              mollitia voluptatum corrupti sint delectus facilis pariatur
+              recusandae! Eveniet, iure debitis?
+            </p>
           </div>
           <div class="col-md-4" data-aos="fade-left">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est quibusdam animi odit unde sequi voluptatibus quo rem perferendis eos, numquam in porro cumque a hic!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est
+              quibusdam animi odit unde sequi voluptatibus quo rem perferendis
+              eos, numquam in porro cumque a hic!
+            </p>
           </div>
         </div>
       </div>
@@ -111,80 +138,78 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3" data-aos="flip-right">
-            <div class="card">
-              <img src="img/projects/1.jpg" class="card-img-top" alt="Project 1" />
+            <div class="card project-tile">
+              <img
+                src="img/projects/tribute-page-jihyo.PNG"
+                class="card-img-top"
+                alt="Project 1"
+              />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-tittle">Jihyo tribute page</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a
+                  href="https://codepen.io/riodrmwn/full/VwMWEyR"
+                  target="_blank"
+                  class="btn btn-primary"
+                  >Deatil Project &raquo;</a
+                >
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="500">
-            <div class="card">
-              <img src="img/projects/2.jpg" class="card-img-top" alt="Project 2" />
+            <div class="card project-tile">
+              <img
+                src="img/projects/survey-form.PNG"
+                class="card-img-top"
+                alt="Project 2"
+              />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-tittle">Survey Form</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a
+                  href="https://codepen.io/riodrmwn/full/xxXpqPN"
+                  target="_blank"
+                  class="btn btn-primary"
+                  >Deatil Project &raquo;</a
+                >
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="1000">
-            <div class="card">
-              <img src="img/projects/3.jpg" class="card-img-top" alt="Project 3" />
+          <div
+            class="col-md-4 mb-3"
+            data-aos="flip-right"
+            data-aos-delay="1000"
+          >
+            <div class="card project-tile">
+              <img
+                src="img/projects/technical-page.PNG"
+                class="card-img-top"
+                alt="Project 3"
+              />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-tittle">Technical Page</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a
+                  href="https://riordarmawan.github.io/technical-documentation-page/"
+                  target="_blank"
+                  class="btn btn-primary"
+                  >Deatil Project &raquo;</a
+                >
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="500">
-            <div class="card">
-              <img src="img/projects/4.jpg" class="card-img-top" alt="Project 4" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="1000">
-            <div class="card">
-              <img src="img/projects/5.jpg" class="card-img-top" alt="Project 5" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
           </div>
         </div>
       </div>
-
-      <section id="my-keyboards">
-        <div class="container">
-          <div class="row text-center mb-3">
-            <div class="col">
-              <h2>My Keyboards</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 col-lg-4 mb-3">
-              <div class="keyboard-box">
-                <h4 class="keyboard-name">Keychron K2</h4>
-                <img src="img/keyboards/3.png" alt="Keychron K3" class="keyboard-img" />
-                <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-3">
-              <div class="keyboard-box">
-                <h4 class="keyboard-name">Womier RGB</h4>
-                <img src="img/keyboards/1.png" alt="Womier RGB" class="keyboard-img" />
-                <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-3">
-              <div class="keyboard-box">
-                <h4 class="keyboard-name">Red Dragon</h4>
-                <img src="img/keyboards/2.png" alt="Red Dragon" class="keyboard-img" />
-                <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
 
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -206,27 +231,62 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6">
-            <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+            <div
+              class="alert alert-success alert-dismissible fade show d-none my-alert"
+              role="alert"
+            >
               <strong>Terimakasih!</strong> Pesan anda sudah kami terima.
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="alert"
+                aria-label="Close"
+              ></button>
             </div>
             <form name="wpu-contact-form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  aria-describedby="name"
+                  name="nama"
+                />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  aria-describedby="email"
+                  name="email"
+                />
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
+                <textarea
+                  class="form-control"
+                  id="pesan"
+                  rows="3"
+                  name="pesan"
+                ></textarea>
               </div>
-              <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+              <button type="submit" class="btn btn-primary btn-kirim">
+                Kirim
+              </button>
 
-              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
-                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              <button
+                class="btn btn-primary btn-loading d-none"
+                type="button"
+                disabled
+              >
+                <span
+                  class="spinner-border spinner-border-sm"
+                  role="status"
+                  aria-hidden="true"
+                ></span>
                 Loading...
               </button>
             </form>
@@ -245,7 +305,14 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white text-center pb-5">
-      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/sandhikagalih/" class="text-white fw-bold">Sandhika Galih</a></p>
+      <p>
+        Created with <i class="bi bi-heart-fill text-danger"></i> by
+        <a
+          href="https://www.instagram.com/sandhikagalih/"
+          class="text-white fw-bold"
+          >Sandhika Galih</a
+        >
+      </p>
     </footer>
     <!-- Akhir Footer -->
 
@@ -261,14 +328,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/TextPlugin.min.js"></script>
 
     <script>
-      gsap.from('.img-thumbnail', { duration: 2, rotationX: 360 });
-      gsap.from('.navbar', { duration: 1.5, opacity: 0, y: '-100%', ease: 'bounce' });
-      gsap.from('.display-4', { delay: 1, duration: 1, opacity: 0, x: '-10%' });
+      gsap.from(".img-thumbnail", { duration: 2, rotationX: 360 });
+      gsap.from(".navbar", {
+        duration: 1.5,
+        opacity: 0,
+        y: "-100%",
+        ease: "bounce",
+      });
+      gsap.from(".display-4", { delay: 1, duration: 1, opacity: 0, x: "-10%" });
 
       gsap.registerPlugin(TextPlugin);
-      gsap.to('.lead', { delay: 1.5, duration: 2, text: 'Lecturer | Content Creator' });
+      gsap.to(".lead", {
+        delay: 1.5,
+        duration: 2,
+        text: "Lecturer | Content Creator",
+      });
 
-      const galleryImages = document.querySelectorAll('.gallery-img');
+      const galleryImages = document.querySelectorAll(".gallery-img");
       const delayTimes = [0, 50, 100, 150, 200, 250, 300, 350, 400, 450];
 
       function shuffleArray(array) {
@@ -282,8 +358,8 @@
       }
       const newDelay = shuffleArray(delayTimes);
       galleryImages.forEach((img, i) => {
-        img.dataset.aos = 'fade-up';
-        img.dataset.aosDelay = i * 50 + '';
+        img.dataset.aos = "fade-up";
+        img.dataset.aosDelay = i * 50 + "";
         // img.dataset.aosDelay = newDelay[i];
       });
 
@@ -294,40 +370,42 @@
     </script>
 
     <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbzjWwvjJihKz3-24SxEnHM5XFjNPgQd_dv3uD_fgjLSp_4AAXsC6IC4C_ECvWyLkGsuBg/exec';
-      const form = document.forms['wpu-contact-form'];
-      const btnKirim = document.querySelector('.btn-kirim');
-      const btnLoading = document.querySelector('.btn-loading');
-      const myAlert = document.querySelector('.my-alert');
+      const scriptURL =
+        "https://script.google.com/macros/s/AKfycbzjWwvjJihKz3-24SxEnHM5XFjNPgQd_dv3uD_fgjLSp_4AAXsC6IC4C_ECvWyLkGsuBg/exec";
+      const form = document.forms["wpu-contact-form"];
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
 
-      form.addEventListener('submit', (e) => {
+      form.addEventListener("submit", (e) => {
         e.preventDefault();
         // ketika tombol submit diklik
         // tampilkan tombol loading, hilangkan tombol kirim
-        btnLoading.classList.toggle('d-none');
-        btnKirim.classList.toggle('d-none');
-        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
           .then((response) => {
             // tampilkan tombol kirim, hilangkan tombol loading
-            btnLoading.classList.toggle('d-none');
-            btnKirim.classList.toggle('d-none');
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
             // tampilkan alert
-            myAlert.classList.toggle('d-none');
+            myAlert.classList.toggle("d-none");
             // reset formnya
             form.reset();
-            console.log('Success!', response);
+            console.log("Success!", response);
           })
-          .catch((error) => console.error('Error!', error.message));
+          .catch((error) => console.error("Error!", error.message));
       });
     </script>
 
     <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
     <script type="text/javascript">
-      VanillaTilt.init(document.querySelectorAll('.keyboard-box'), {
+      VanillaTilt.init(document.querySelectorAll(".keyboard-box"), {
         max: 35,
         speed: 1000,
         glare: true,
       });
     </script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
