--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section class="jumbotron text-center" id="welcome-section">
       <img
         src="img/rio.jpg"
-        alt="Sandhika Galih"
+        alt="Rio Riswandha Darmawan"
         width="200"
         class="rounded-circle img-thumbnail"
       />
